# git-lab-work

./: CMakeLists.txt  Makefile  README.m  README.md
data/: init_full.sql  laboratory.db
resources/: resources.qrc
resources/styles/: default.qss
sql/: init_data.sql  schema.sql
src/: CMakeLists_simple.txt  database.cpp  database.h  dialogs.cpp  dialogs.h  fix_mainwindow.patch  mainwindow.h
